# rapids_dependencies

./: README.md
conda_meta/: meta.yaml
pip_meta/: pyproject.toml
