# Copyright (c) 2023, NVIDIA CORPORATION.

[project]
name = "rapids_dependencies"
version = "0.0.0"
description = "Common dependencies for the RAPIDS suite"
# TODO: In theory this becomes a centralized place to define our required
# Python version, but I'm not sure if we want to embed that information.
requires-python = ">=3.9"

[project.optional-dependencies]
# Individual dependencies
# TODO: When rapids-dependency-file-generator supports meta.yaml and matrixed
# pyproject.toml we should generate these using dfg.
numpy = ["numpy >=1.21"]
numba = ["numba>=0.56.4,<0.57"]
cupy-11 = ["cupy-cuda11x >=12"]
cupy-12 = ["cupy-cuda12x >=12"]
cuda-python-11 = ["cuda-python >=11.7.1,<12"]
cuda-python-12 = ["cuda-python >=12"]

# Groups
build = [
    "setuptools>=61.0.0",
    "tomli",
    "wheel",
]
build_binary = [
    "cmake>=3.23.1,!=3.25.0"
    "cython>=0.29,<0.30",
    "ninja",
    "rapids_dependencies[build]",
    "scikit-build>=0.13.1,<0.17.2",
]
dask = [
    "dask==2023.3.2",
    "distributed==2023.3.2.1",
]
# TODO: Determine what to pin here; maybe just use the GH URL and then pin at release.
dask_cuda = ["dask-cuda==23.6.*"]
test = ["pytest", "pytest-cov", "pytest-xdist"]
